<resources>
    <string name="app_name">MovieTicket</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Its easier to find out\nwhich movie is playing</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">No worry missing\nthe latest movie updates</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Use e-wallet\nto buy movie tickets</string>
    <string name="start">Start</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="upload_later">Upload Later</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome\nAlva Yonara</string>
    <string name="save_and_next">Save and Next</string>
    <string name="alva">Alva Yonara</string>
    <string name="coming_soon">Coming Soon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ticket">Ticket</string>
    <string name="profile">Profile</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="ewallet">E-Wallet</string>
    <string name="totalbalance">Total Balance</string>
    <string name="lihat_tike">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="happy_watch">Happy Watching!</string>
    <string name="simpan_data">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_history">My History</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="settings">Settings</string>
    <string name="who_played">Who’s Played</string>
    <string name="storyboard">Storyboard</string>
    <string name="choose_seat">Choose Seat</string>
    <string name="purchase_ticket">Purchase Ticket</string>
    <string name="cinema_screen">Cinema Screen</string>
    <string name="cancel">Cancel</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="insufficient_balance">Insufficient balance in your e-wallet\nto make a transaction</string>
    <string name="empty_balance">Rp0,00</string>
    <string name="ticket_purchased">Tickets successfully purchased\nEnjoy the movie!</string>
    <string name="see_ticket">See Ticket</string>
    <string name="todays">Todays</string>
    <string name="cinema_location">Transmart MX Mall, XXI</string>
    <string name="movie_date">22 June, 8 PM</string>
    <string name="content_title">Successfully Purchased</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
</resources>